Fixed footer z-index and mobile padding

--- a/styles/Pricing/Pricing.module.scss
+++ b/styles/Pricing/Pricing.module.scss
@@ -50,6 +50,7 @@
 
 .footerSection {
     overflow: hidden;
+    background-color: var.$secondary-color-mirage;
 
     @include var.respond-to("mobile") {
         &::before {
@@ -57,6 +58,7 @@
             height: 200vw;
             top: 45%;
             left: -49%;
+            z-index: 2;
         }
     }
 
